# VisiVerse

./: .gitignore  Pipfile  README.md  config.py  database.py  pyproject.toml  run.py  server.py  transcoder.py
templates/features/: footer.html
templates/layouts/: base.html  sidebar_left.html  sidebar_none.html  sidebar_right.html
templates/pages/: home.html  view.html
visiverse/: __init__.py  authenticator.py  database.py  transcoder.py
visiverse/static/css/: custom.css  theme.css
visiverse/templates/assets/js/: authenticator.js
visiverse/templates/features/: footer.html  header.html  media_tiles.html
visiverse/templates/layouts/: base.html  sidebar_left.html  sidebar_none.html  sidebar_right.html
visiverse/templates/pages/: home.html  login.html  view.html
