[tool.poetry]
name = "visiverse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
aiosqlite = "^0.20.0"
ffmpeg-python = "^0.2.0"
argon2-cffi = "^23.1.0"
quart-auth = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
